--- a/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
+++ b/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
         <PackageReference Include="Volo.Abp.Core" Version="3.1.0" />
         <PackageReference Include="Volo.Abp.AspNetCore" Version="3.1.0" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="3.1.0" />
         <PackageReference Include="Volo.Abp.Ddd.Application" Version="3.1.0" />
     </ItemGroup>
 
