--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "RuralAssetsConnectString": "server=144.7.116.1;userid=root;pwd=Adm-12345;port=3306;database=ruralassets;SslMode=none;",
-  "CreditUri": ""
+  "Config": {
+    "RuralAssetsConnectString": "server=144.7.116.1;userid=root;pwd=Adm-12345;port=3306;database=ruralassets;SslMode=none;",
+    "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit"
+  },
+  "PrivateKey": ""
 }
