--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -9,7 +9,11 @@
   "AllowedHosts": "*",
   "Config": {
     "RuralAssetsConnectString": "server=144.7.116.1;userid=root;pwd=Adm-12345;port=3306;database=ruralassets;SslMode=none;",
-    "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit"
+    "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit",
+    "BlockChainEndpoint": "http://144.7.116.20:1726/",
+    "AccountAddress": "",
+    "AccountPassword": "",
+    "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS"
   },
   "PrivateKey": ""
 }
