--- a/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
+++ b/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
@@ -6,6 +6,9 @@
 
     <ItemGroup>
         <PackageReference Include="MySql.Data" Version="8.0.22" />
+        <PackageReference Include="AElf.Client" Version="0.1.5" />
+        <PackageReference Include="AElf.Types" Version="1.0.0-rc1" />
+        <PackageReference Include="Nethereum.KeyStore" Version="3.7.1" />
 
         <PackageReference Include="Volo.Abp.Autofac" Version="3.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
