--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -15,5 +15,9 @@
     "AccountPassword": "",
     "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS"
   },
-  "PrivateKey": ""
+  "ApiAuthorize": {
+    "AppAccount": {
+      "cacfintech": "bocfullertonbank"
+    }
+  }
 }
