--- a/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
+++ b/RuralAssets.WebApplication/RuralAssets.WebApplication.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="Volo.Abp.AspNetCore" Version="3.1.0" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="3.1.0" />
         <PackageReference Include="Volo.Abp.Ddd.Application" Version="3.1.0" />
+        <PackageReference Include="Volo.Abp.Caching" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
