--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -11,13 +11,13 @@
     "RuralAssetsConnectString": "server=144.7.116.1;userid=root;pwd=Adm-12345;port=3306;database=ruralassets;SslMode=none;",
     "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit",
     "BlockChainEndpoint": "http://144.7.116.20:1726/",
-    "AccountAddress": "",
-    "AccountPassword": "",
+    "AccountAddress": "DmjQGuGNcNQ55o5JNboWho6QvwynWnSt5njipvBeD3RNXxPoA",
     "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS"
   },
   "ApiAuthorize": {
     "AppAccount": {
       "cacfintech": "bocfullertonbank"
-    }
+    },
+    "EnableAuthorization": false
   }
 }
