--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -10,7 +10,7 @@
   "Config": {
     "RuralAssetsConnectString": "server=144.7.116.1;userid=root;pwd=Adm-12345;port=3306;database=ruralassets;SslMode=none;",
     "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit",
-    "BlockChainEndpoint": "http://localhost:1726/",
+    "BlockChainEndpoint": "http://144.7.116.1:1726/",
     "AccountAddress": "asoqSF2R4oFJBMqr95TRuaMiUMP5SXdVdwYH5HBQjYqk22CHw",
     "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS"
   },
