--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -12,7 +12,8 @@
     "CreditUri": "http://172.16.73.43:8010/api/v1.0/asset/credit",
     "BlockChainEndpoint": "http://144.7.116.1:1726/",
     "AccountAddress": "asoqSF2R4oFJBMqr95TRuaMiUMP5SXdVdwYH5HBQjYqk22CHw",
-    "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS"
+    "RuralContractAddress": "2LUmicHyH4RXrMjG4beDwuDsiWJESyLkgkwPdGTR8kahRzq5XS",
+    "FileSaveDir": "./LoanFile"
   },
   "ApiAuthorize": {
     "AppAccount": {
