--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Debug"
     }
   },
   "AllowedHosts": "*",
@@ -17,9 +17,11 @@
   "ApiAuthorize": {
     "AppAccount": {
       "cacfintech": "bocfullertonbank"
-    },
-    "EnableAuthorization": false,
-    "EnableIdCardCheck": false,
-    "Url": "http://144.7.116.1:7080"
-  }
+    }
+  },
+  "EnableAuthorization": false,
+  "EnableIdCardCheck": false,
+  "Url": "http://144.7.116.1:7080",
+  "EnableCrypto": false,
+  "CryptoKey": "xiongan20201214a"
 }
