--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -22,7 +22,7 @@
   },
   "EnableAuthorization": false,
   "EnableIdCardCheck": false,
-  "Url": "http://144.7.116.1:7080",
+  "Url": "http://localhost:7080",
   "EnableCrypto": false,
   "CryptoKey": "xiongan20201214a"
 }
