Fix change_status impl.

--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -23,6 +23,6 @@
   "EnableAuthorization": false,
   "EnableIdCardCheck": false,
   "Url": "http://localhost:7080",
-  "EnableCrypto": false,
+  "EnableCrypto": true,
   "CryptoKey": "xiongan20201214a"
 }
