Add AllowMinites to ApiAuthorize

--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -18,7 +18,8 @@
   "ApiAuthorize": {
     "AppAccount": {
       "cacfintech": "bocfullertonbank"
-    }
+    },
+    "AllowMinutes": 30
   },
   "EnableAuthorization": true,
   "EnableIdCardCheck": false,
