Fix upload interface impl.

--- a/RuralAssets.WebApplication/appsettings.json
+++ b/RuralAssets.WebApplication/appsettings.json
@@ -19,7 +19,8 @@
     "AppAccount": {
       "cacfintech": "bocfullertonbank"
     },
-    "AllowMinutes": 30
+    "AllowMinutes": 10,
+    "TolerantMilliseconds": 30000
   },
   "EnableAuthorization": true,
   "EnableIdCardCheck": false,
